--- a/templates/all-show-reviews.html
+++ b/templates/all-show-reviews.html
@@ -14,35 +14,18 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% include "navbar.html" %}
 
-<!--<div class="comment-section">-->
-<!--    <h2 class="comment-title">Comments</h2>-->
-<!--    <ul class="commentList">-->
-<!--        {% for comment in comments: %}-->
-<!--        <li>-->
-<!--            <div class="commenterImage">-->
-<!--            </div>-->
-<!--            <div class="commentText">-->
-<!--                <p>{{ comment.text|safe }}</p>-->
-<!--            </div>-->
-<!--            <div class="avatar-image">-->
-<!--                <span>{{ comment.comment_author.username }}</span>-->
-<!--                <img src="{{ url_for('static', filename='img/scoob.jpeg')}}"/>-->
-<!--            </div>-->
-<!--        </li>-->
-<!--        {% endfor %}-->
-<!--    </ul>-->
-<!--</div>-->
+
 
 
 {% block content %}
 
 <h1 class="show-review-header">Show Reviews</h1>
-<h2 class="description">these are your experiences, your good times and bad times.</h2>
+<h2 class="description">these are your experiences, your good times and bad times. click the middle for comments etc.</h2>
 {% for review in reviews %}
 <div class="space"></div>
 <div class="container">
 
-  <div class="card">
+  <div class="card"><a href="{{ url_for('view_show_review', review_id=review.id) }}">
     <div class="back">
         <div>
             <div class="title">"{{ review.title }}"</div>
@@ -52,7 +35,7 @@
             <p class="review"><span class="venue-name">Artist(s): </span>{{ review.artist_names }}</p>
             <p class="review"><span class="venue-name">Genre: </span>{{ review.genre }}</p>
             <p class="overview">{{ review.review }}</p>
-            <p class="review"><span class="venue-name">Post by </span>{{ review.user.username }}</p>
+            <p class="review"><span class="venue-name">Post by </span>{{ review.user.username }}</p></a>
             {% if review.user_id == current_user.id: %}
             <a href="{{ url_for('edit_show_review', id=review.id) }}" class="button edit-btn">Edit</a>
             <a href="{{ url_for('delete_show_review', post_id=review.id) }}" class="button delete-btn">Delete</a>
