--- a/templates/all-venue-reviews.html
+++ b/templates/all-venue-reviews.html
@@ -36,19 +36,19 @@
 
 {% block content %}
 <h1 class="show-review-header">Venue Reviews</h1>
-<h2 class="description">this is what you have to say about your local venues.</h2>
+<h2 class="description">this is what you have to say about your local venues. click middle for comments etc.</h2>
 {% for review in reviews: %}
 <div class="space"></div>
 <div class="container">
 
 
   <div class="card">
-    <div class="back">
+    <div class="back"><a href="{{ url_for('view_venue_review', id=review.id) }}">
         <div>
             <div class="title">"{{ review.review_title }}"</div>
             <p class="review"><span class="venue-name">Venue: </span>{{ review.venue_name }}</p>
             <p class="review"><span class="venue-name">City: </span>{{ review.parent_post.city }}</p>
-            <p class="overview">{{ review.review }}</p>
+            <p class="overview">{{ review.review }}</p></a>
             {% if review.user_id == current_user.id: %}
             <a href="{{url_for('edit_venue_review', id=review.id) }}" class="button edit-btn">Edit</a>
             <a href="{{ url_for('delete_venue_review', post_id=review.id) }}" class="button delete-btn">Delete</a>
