--- a/templates/edit-venue-review.html
+++ b/templates/edit-venue-review.html
@@ -8,4 +8,13 @@
     <button type="submit">edit</button>
 </form>
 </div>
+<script>
+    const hamburger = document.querySelector('#hamburger');
+    const navUL = document.querySelector('.navlist');
+
+    hamburger.addEventListener('click', () => {
+        console.log('hi');
+        navUL.classList.toggle('show');
+});
+</script>
 {% include "footer.html" %}
