--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -7,6 +7,13 @@
 <div class="title edit-page">
     <h1>Edit Profile</h1>
     <h2 class="subhead">do not edit fields you dont wish to change... </h2>
+    {% with messages = get_flashed_messages() %}
+        {% for msg in messages: %}
+            {% if msg: %}
+                <p>{{ msg }} </p>
+            {% endif %}
+        {% endfor %}
+    {% endwith %}
     {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
 </div>
 {% include "footer.html" %}
