--- a/templates/edit-show-review.html
+++ b/templates/edit-show-review.html
@@ -1,6 +1,7 @@
 {% include "site.html" %}
 {% include "navbar.html" %}
 
+{% block content %}
 <div class="title">
 <form action="{{ url_for('edit_show_review', id=review.id) }}" method="post">
     <label>Edit Rating</label>
@@ -14,4 +15,14 @@
     <button type="submit">edit</button>
 </form>
 </div>
+{% endblock %}
+<script>
+    const hamburger = document.querySelector('#hamburger');
+    const navUL = document.querySelector('.navlist');
+
+    hamburger.addEventListener('click', () => {
+        console.log('hi');
+        navUL.classList.toggle('show');
+});
+</script>
 {% include "footer.html" %}
