--- a/templates/show-review.html
+++ b/templates/show-review.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Local Shows API;</title>
-    <link href="{{ url_for('static', filename='review-styles.css')}}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='review-styles.css')}}", rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,600;0,700;1,100;1,600&display=swap" rel="stylesheet">
@@ -51,7 +51,7 @@
 
             <div class="commentText">
                 <p>{{ comment.text|safe }}</p>
-                <a href="{{ url_for('show_profile', username=comment.comment_author.username) }}"><p class="commenter-name">{{ comment.comment_author.username }}</p></a>
+                <a class="commenter-a" href="{{ url_for('show_profile', username=comment.comment_author.username) }}"><p class="commenter-name">{{ comment.comment_author.username }}</p></a>
             </div>
 
 
@@ -63,7 +63,7 @@
 
 </div>
     {% if current_user.is_authenticated %}
-        <form action="{{ url_for('view_show_review', review_id=post.id) }}" method="post">
+        <form class="comment-form" action="{{ url_for('view_show_review', review_id=post.id) }}" method="post">
             <label>Comment</label>
             <textarea id="venue-review" type="text" placeholder="say it dont spray it" style="width: 500px; height:200px" name="comment"></textarea>
             <button>share</button>
@@ -71,5 +71,13 @@
 
     {% endif %}
 </div>
+<script>
+    const hamburger = document.querySelector('#hamburger');
+    const navUL = document.querySelector('.navlist');
 
+    hamburger.addEventListener('click', () => {
+        console.log('hi');
+        navUL.classList.toggle('show');
+});
+</script>
 {% include "footer.html" %}
